tests/NormalTests/paczka1/small_fuzzy/16196827.err
Error in line 2: lQ27GeMH S250 48,0
Error in line 4: lQ27GeMH S987 89,2
